<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.AccountDetailsFragment">

    <TextView
        android:id="@+id/tv_account_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:gravity="center"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:textSize="14sp"
        android:textStyle="bold"
        tools:text="@string/complete_access" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/account_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.appbar.AppBarLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.appbar.CollapsingToolbarLayout
                        android:id="@+id/collapsingToolbarLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_scrollFlags="scroll|exitUntilCollapsed">

                        <!-- Toolbar content goes here -->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            app:layout_collapseMode="parallax">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="4dp"
                                android:orientation="vertical"
                                android:padding="16dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/available"
                                    android:textColor="@color/color1"
                                    android:textSize="14sp" />

                                <TextView
                                    android:id="@+id/tv_available_amount"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginVertical="4dp"
                                    android:textColor="@color/color1"
                                    android:textSize="16sp"
                                    android:textStyle="bold"
                                    tools:text="$226.76" />

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/balance"
                                        android:textColor="@color/color2"
                                        android:textSize="14sp" />

                                    <TextView
                                        android:id="@+id/tv_balance_amount"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginStart="8dp"
                                        android:textColor="@color/color1"
                                        android:textSize="14sp"
                                        tools:text="$246.70" />

                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="4dp"
                                    android:orientation="horizontal">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/pending"
                                        android:textColor="@color/color2"
                                        android:textSize="14sp" />

                                    <TextView
                                        android:id="@+id/tv_pending_amount"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginStart="8dp"
                                        android:textColor="@color/color1"
                                        android:textSize="14sp"
                                        tools:text="-$137.80" />

                                </LinearLayout>

                            </LinearLayout>

                            <com.google.android.material.divider.MaterialDivider
                                android:layout_width="match_parent"
                                android:layout_height="1dp" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:padding="16dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="4dp"
                                    android:includeFontPadding="false"
                                    android:text="@string/bsb"
                                    android:textColor="@color/color1"
                                    android:textSize="14sp" />

                                <TextView
                                    android:id="@+id/tv_bsb_number"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="8dp"
                                    android:includeFontPadding="false"
                                    android:textColor="@color/color2"
                                    android:textSize="14sp"
                                    tools:text="062005" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="8dp"
                                    android:includeFontPadding="false"
                                    android:text="@string/account"
                                    android:textColor="@color/color1"
                                    android:textSize="14sp" />

                                <TextView
                                    android:id="@+id/tv_account_number"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="8dp"
                                    android:includeFontPadding="false"
                                    android:textColor="@color/color2"
                                    android:textSize="14sp"
                                    tools:text="1709 5888" />

                            </LinearLayout>

                            <com.google.android.material.divider.MaterialDivider
                                android:layout_width="match_parent"
                                android:layout_height="1dp" />

                        </LinearLayout>

                        <!-- Other views inside the CollapsingToolbarLayout -->

                    </com.google.android.material.appbar.CollapsingToolbarLayout>

                </com.google.android.material.appbar.AppBarLayout>

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_account_details"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/transaction_item_layout" />

                </androidx.core.widget.NestedScrollView>

            </androidx.coordinatorlayout.widget.CoordinatorLayout>


        </LinearLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>